Fix up user object and make sure storage works well

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "auth-delegate-livefyre",
   "description": "Authentication delegates for Livefyre projects",
   "author": "Livefyre <support@livefyre.com>",
+  "repository": "https://github.com/Livefyre/auth-delegates",
   "contributors": {
     "name": "Ross Pfahler",
     "email": "ross@livefyre.com"
