--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,12 @@
 {
   "name": "auth-delegate-livefyre",
-  "version": "1.0.0",
-  "dependencies": {
+  "version": "0.1.0",
+  "main": "dist/auth-delegates.min.js",
+  "devDependencies": {
+  	"almond": "0.2.6",
     "cajon": "git@github.com:requirejs/cajon.git#~0.1.11",
     "event-emitter": "git://github.com/Livefyre/event-emitter.git",
     "inherits": "git://github.com/Livefyre/inherits.git"
   },
-  "devDependencies": {}
+  "dependencies": {}
 }
