--- a/package.json
+++ b/package.json
@@ -7,17 +7,17 @@
     "name": "Ross Pfahler",
     "email": "ross@livefyre.com"
   },
-  "version": "1.0.0",
+  "version": "0.1.0",
   "devDependencies": {
     "bower": "*",
     "chai": "1.8.1",
     "express": "*",
-    "http-server": "*",
     "mocha": "1.14.0",
     "mocha-phantomjs": "3.1.6",
     "phantomjs": "*"
   },
   "scripts": {
+    "build": "./node_modules/requirejs/bin/r.js -o ./build.conf.js",
     "postinstall": "./node_modules/bower/bin/bower install",
     "start": "node ./server.js",
     "test": "./bin/test"
