Move tests -> test, and apply hinting magic for clean code.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bower": "*",
     "chai": "1.8.1",
     "express": "*",
+    "jshint": "~1.1.0",
     "mocha": "1.14.0",
     "mocha-phantomjs": "3.1.6",
     "phantomjs": "*",
@@ -19,6 +20,7 @@
   },
   "scripts": {
     "build": "./node_modules/requirejs/bin/r.js -o ./build.conf.js",
+    "hint": "./node_modules/jshint/bin/jshint src/ test/spec/; echo",
     "postinstall": "./node_modules/bower/bin/bower install",
     "start": "node ./server.js",
     "test": "./bin/test"
