--- a/bower.json
+++ b/bower.json
@@ -1,12 +1,12 @@
 {
   "name": "auth-delegate-livefyre",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "main": "dist/auth-delegates.min.js",
   "devDependencies": {
   	"almond": "0.2.6",
     "base64": "git@github.com:ross-pfahler/Base64.js.git#~0.3.2",
     "cajon": "git@github.com:requirejs/cajon.git#~0.1.11",
-    "event-emitter": "git://github.com/Livefyre/event-emitter.git",
+    "event-emitter": "git://github.com/Livefyre/event-emitter.git#~0.0.1",
     "inherits": "git://github.com/Livefyre/inherits.git",
     "js-md5": "~1.1.0"
   },
