--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "name": "Ross Pfahler",
     "email": "ross@livefyre.com"
   },
-  "version": "0.3.6",
+  "version": "0.4.0-beta",
   "devDependencies": {
     "bower": "*",
     "chai": "1.8.1",
