--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "name": "Ross Pfahler",
     "email": "ross@livefyre.com"
   },
+  "license": "MIT",
   "version": "0.4.6-beta",
   "devDependencies": {
     "bower": "*",
