--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bower": "*",
     "chai": "1.8.1",
     "express": "*",
-    "jshint": "~1.1.0",
+    "jshint": "2.9.7",
     "mocha": "1.14.0",
     "mocha-phantomjs": "3.1.6",
     "phantomjs": "*",
